# drf-xml-serializers

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
drf_xml_serializers/: fields.py  serializers.py
tests/: settings.py  test_fields.py  test_serializers.py
